<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/background_dialog">

    <EditText
        android:id="@+id/etAddHunting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="20"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/hunting_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/tvDateField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/date_format"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_calendar"
        android:text="@string/select_date"/>

    <Button
        android:id="@+id/btnAddHunting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        android:background="@color/btn_accent"
        android:text="@string/add_hunting"/>
</LinearLayout>