<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".DogListActivity">
    <include
        layout="@layout/action_toolbar"/>
    <LinearLayout
        android:id="@+id/lyLeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLeHeaderId"
            style="@style/FullEquipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLeHeaderName"
            style="@style/FullEquipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/name"
            app:layout_constraintStart_toEndOf="@id/tvLeHeaderId"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLeHeaderGps"
            style="@style/FullEquipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps"
            app:layout_constraintStart_toEndOf="@id/tvLeHeaderName"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvFeHeaderCollected"
            style="@style/FullEquipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collected"
            app:layout_constraintStart_toEndOf="@id/tvLeHeaderGps"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_edit" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyLeHeader"/>


    <TextView
        android:id="@+id/tvLeTotalDogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvLeTotalCollected"
        android:layout_marginBottom="15dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:text="@string/total_dogs"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/tvLeTotalCollected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:text="@string/total_collected"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/tvLeMissing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvLeTotalCollected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:text="@string/total_missing"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListEquip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyLeHeader"
        android:paddingBottom="230dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>