<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateHuntingActivity">

    <include
        layout="@layout/action_toolbar"/>
    <LinearLayout
        android:id="@+id/lyHDHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHDHeaderId"
            style="@style/FullEquipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_order"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHDHeaderName"
            style="@style/FullEquipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/date"
            android:textAlignment="textStart"
            app:layout_constraintStart_toEndOf="@id/tvHDHeaderId"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFeHeaderSelected"
            style="@style/FullEquipHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/hunting"
            android:textAlignment="textStart"
            app:layout_constraintStart_toEndOf="@id/tvHDHeaderName"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_edit" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyHDHeader"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabHDAddHunting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/btn_accent"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvHDTotalHunting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:text="@string/total_hunting"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHuntingDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyHDHeader"
        android:paddingBottom="230dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>